<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/tool_bar" />

    <!-- 内容部分 -->
    <!-- layout_behavior:用来控制内容区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--
            这里不能使用maxLength限制最长字符数
            因为我们这里用户名还有邮箱

            这里不能使用maxLength限制最长字符数
            因为我们这里用户名还有邮箱所以用textEmailAddress
            textEmailAddress:用这个可以输入邮箱和手机号，
            后面可以在代码中判断是手机号还是邮箱
       -->
        <EditText
            android:id="@+id/et_username"
            style="@style/EditText"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditText"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/padding_large"
            android:background="@drawable/selector_color_primary"
            android:text="@string/login"
            android:textColor="@drawable/selector_text_color_primary_reverse" />

        <!--
            style="?attr/borderlessButtonStyle" 肯能有些系统没有这个属性，所以可能找不到，所以加上下面的透明色
            android:background="@color/transparent"
        -->
        <Button
            android:id="@+id/bt_forget_password"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/padding_large"
            android:background="@color/transparent"
            android:text="@string/forget_password"
            android:textColor="@color/light_grey" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>