...
tools:openDrawer:预览的时候开启方向
只要是tools命名控件的属性一般都是控制预览的-->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dl"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <!--这部分是主界面内容-->
...
