...
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <!-- 登录/注册-->
        <Button
            android:id="@+id/bt_login_or_register"
            android:layout_width="@dimen/button_width_large"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/selector_color_primary"
            android:textColor="@drawable/selector_text_color_primary_reverse"
            android:text="@string/login_or_register"/>
        <View
...
